--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
-        "mpdf/mpdf": "5.7.3"
+        "mpdf/mpdf": "5.7.3",
+        "yiisoft/yii": "1.1.15"
     }
 }
